fixed the bootstrap navbar to stretch across the screen. Changed the height/padding of the banner/title.

--- a/static/webapp/css/bootstrap.css
+++ b/static/webapp/css/bootstrap.css
@@ -4646,10 +4646,11 @@ tbody.collapse.in {
 }
 
 .navbar {
-  position: relative;
+  position: fixed;
   min-height: 55px;
   margin-bottom: 20px;
   border: 1px solid transparent;
+  z-index: 1;
 }
 .navbar:before, .navbar:after {
   content: " ";
